# trashy_modmail

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  handler.rs  main.rs  storage.rs
