[package]
name = "trashy_modmail"
version = "0.1.0"
authors = ["Denis Richartz <denisrichartz92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
dotenv = "0.15"
lazy_static = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "0.2", features = ["full"] }

[dependencies.serenity]
version = "0.9.0"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]